# machine-learning-algorithms

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
algorithms/: __init__.py  bayes_classification.py  linear_regression.py  preceptron.py  vae.py  vae_model.py
algorithms_examples/: 01- VAE.ipynb  02- Generate Chrismas Tree.ipynb  GenerateVAE.py  download_chrismas.py
algorithms_tools/: vae_metrics.py
examples/: linear_regression.py  naive_bayes.py  perceptron.py
tests/: test_bayes.py
