[metadata]
name = algorithms
author = ENSP-AI-Mentoring
author_email = kamenialexnea@gmail.com
version = attr: algorithms.__version__
description = Implementation from scratch of some machine learning algorithms
long_description = file: README.md, LICENSE.rst
keywords = machine learning, algorithms, classifiers, regressors
license = Other/Proprietary License
url = https://github.com/ENSP-AI-Mentoring/machine-learning-algorithms
classifiers = 
    DevelopmentStatus :: 3 - Alpha
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    numpy
    pandas
    matplotlib
    torch
    torchnet
